--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -81,6 +81,7 @@ body {
   align-items:center;
   display: inline-flex;
   white-space: nowrap; /* Prevents text from wrapping */
+  cursor:pointer;
 }
 
 .logo a {
@@ -91,11 +92,11 @@ body {
     object-fit: contain; /* Or cover, fill, scale-down as needed */
 }
 
-.logo:hover, .logo .inc:hover {    
+.logo:hover, .logo .inc:hover, .welcomeTxt:hover {    
     transform: scale(1.05);
 }
 
-.logo a:hover {
+.logo a:hover, .welcomeTxt:hover {
     color: #FFD700;
 }
 
@@ -199,3 +200,38 @@ body {
     text-decoration: underline;
     font-weight: 750;
 }
+
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    list-style-type: none;
+    padding: 0;
+    margin-top: 2.2rem;
+    margin-left: -0.8rem;
+    font-size:0.8rem;
+    border-radius: 0.24rem;
+
+  }
+  
+  .dropdown-menu.visible {
+    display: block;
+  }
+  
+  .dropdown-menu li, .dropdown-menu a { padding: 0.5rem 0.7rem; }
+
+  .dropdown-menu a:link, .dropdown-menu a:visited { 
+    color:#000000;
+    text-decoration: none; 
+    margin:0;
+    padding:0;
+}
+
+  .dropdown-menu li:hover  {
+    background-color: #f3f3f3;
+    text-decoration: underline;
+    font-weight: 800;
+  }
